Adding full-fledged directory structure with K&L Logo defaults

--- a/.gitattributes
+++ b/.gitattributes
@@ -74,7 +74,7 @@ WHATSNEW*          text
 *.ai               binary
 *.anim             binary
 *.apk              binary
-*.asset            binary
+*.asset            binary diff=astextplain
 *.bin              binary
 *.bmp              binary
 *.BMP              binary
